# cpp-concurrency

./: .gitignore  CMakeLists.txt  README.md  SentEmails.log.txt
.devcontainer/: Dockerfile  devcontainer.json
TooManyTasksNotEnoughSpeed/: CMakeLists.txt  Main.cpp
TooManyTasksNotEnoughSpeed/Includes/: Common.hpp  Email.hpp  EmailGenerator.hpp  EmailPriorityComparator.hpp  EmailQueueManager.hpp  Main.hpp  Response.hpp
